# Heart-Doctor-Assistant

./: README.md  app.py  diet_model.py  dietmodel.pkl  model.py  modell.pkl  pyproject.toml  requirements.txt
static/css/: default-skin.css  form.css  style.css
templates/: Report_result.html  diet_result.html  dietpage.html  form.html  index.html  medicine.html
