[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A brief description"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "your_package_name" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.3"
gunicorn = "^20.1.0"
pandas = "^1.4.2"
numpy = "^1.22.4"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
